FIX : splashscreen 때 홈 화면 로드되도록 z-index:1로 처리함

--- a/src/pages/Home.module.scss
+++ b/src/pages/Home.module.scss
@@ -1,5 +1,10 @@
 @use "../styles/font";
 
+.splash-screen-container {
+  position: relative;
+  z-index: 1;
+}
+
 .home {
   @include font.handwriting1;
   @media screen and (max-width: 768px) {
